# Backend-Olimpiadas-Matematica

./: .env.example  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  approve_admin.py  check_imports.py  docker-compose.yml  estrutura-backend.txt  fix_db.py  gunicorn.conf.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  test_pg.py
alembic/: env.py
alembic/versions/: 20260225_3a965be443c6_remove_thumbnail_url_from_images.py  20260416_ab1890dcbb08_initial_schema.py  20260518_41bb2bc3c6a5_add_user_profiles_table.py  20260518_a9a6de39f5e2_add_user_profiles_table.py  20260521_456b9921f5e0_adiciona_coluna_accepted_terms_em_users.py  20260522_22270e629d98_cria_tabela_custom_bncc.py  20260523_6c53f228a6bb_criar_custom_bncc.py  20260524_66faf0295d92_add_hide_alternatives_to_exam_questions.py  20260526_c45750ecec48_add_reviewed_by_id_to_exams.py  20260620_2ce08d7570eb_add_author_email_to_exams_table.py  20260620_b31ec7f4ee7f_add_user_approval_status.py  20260620_cdb4339fac58_add_author_email_snapshot.py
app/: database.py  dependencies.py  main.py
app/core/: config.py  exceptions.py  mail.py  (+2 more)
requirements/: base.txt  development.txt  production.txt
scripts/: add_exam_ano_column.py  add_exam_author_name_column.py  add_exam_layout_columns.py  add_notifications_table.py  add_reviewed_by_column.py  add_reviewer_comments_column.py  add_triggered_by_column.py  alembic.ini  backup_database.py  create_admin.py  migrate_data.py  migrate_from_json.py  pytest.ini  seed_database.py  test_conecao_db.py
test-prod/: pyvenv.cfg
(+61 files in other folders)
